<resources>
    <string name="app_name">WordsStudy</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_word">Word</string>
    <string name="text_view_translate">Translated word</string>
    <string name="button_one_min">1 min</string>
    <string name="button_one_day">1 Day</string>
    <string name="button_four_day">4 Days</string>
    <string name="add_word_by_text">Text</string>
    <string name="add_word_by_voice">Voice</string>
    <string name="button_translate_word">Translate</string>
    <string name="button_add_word">Add</string>

</resources>
