<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.study.wordsstudy.ShowWordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/word"
        android:layout_marginTop="108dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:text="@string/text_view_word" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:id="@+id/translate"
        tools:text="@string/text_view_translate" />

    <Button
        android:text="@string/button_one_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:id="@+id/one_min_button" />

    <Button
        android:text="@string/button_one_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/one_min_button"
        android:layout_alignStart="@+id/translate"
        android:id="@+id/one_day_button" />

    <Button
        android:text="@string/button_four_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/one_day_button"
        android:layout_toEndOf="@+id/translate"
        android:layout_marginStart="16dp"
        android:id="@+id/four_day_button" />

</RelativeLayout>
